# Trace

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  OAI_CONFIG_LIST_4  OAI_CONFIG_LIST_4T  OAI_CONFIG_LIST_sample  README.md  api.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  readthedocs.yaml  requirements.txt  search.html  searchindex.js  setup.py  test_output.txt
.project_doc_record/: meta-info.json  project_hierarchy.json
_modules/: index.html
_sources/: index.md  intro.md  readme.md
_static/: compatibility.css  pygments.css
api/: opto.html  opto.optimizers.buffers.FIFOBuffer.add.html  opto.optimizers.buffers.FIFOBuffer.html  opto.optimizers.buffers.html  opto.optimizers.html  opto.optimizers.opro.OPRO.backward.html  opto.optimizers.opro.OPRO.call_llm.html  opto.optimizers.opro.OPRO.construct_prompt.html  opto.optimizers.opro.OPRO.construct_update_dict.html  opto.optimizers.opro.OPRO.default_objective.html  opto.optimizers.opro.OPRO.default_prompt_symbols.html  opto.optimizers.opro.OPRO.default_propagator.html  opto.optimizers.opro.OPRO.example_problem_template.html  opto.optimizers.opro.OPRO.example_prompt.html  opto.optimizers.opro.OPRO.extract_llm_suggestion.html  opto.optimizers.opro.OPRO.final_prompt.html  opto.optimizers.opro.OPRO.html  opto.optimizers.opro.OPRO.output_format_prompt.html  opto.optimizers.opro.OPRO.problem_instance.html  opto.optimizers.opro.OPRO.propagator.html  opto.optimizers.opro.OPRO.propose.html  opto.optimizers.opro.OPRO.replace_symbols.html  (+437 more)
(+913 files in other folders)
